--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@material-ui/icons": "^4.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.4",
+    "sweetalert2-react-content": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
